--- a/whatsapp-backend/package.json
+++ b/whatsapp-backend/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "electron-squirrel-startup": "^1.0.1",
     "express": "^4.18.2",
+    "googleapis": "^170.1.0",
+    "multer": "^2.0.2",
     "pino": "^8.19.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0"
